--- a/index copy.html
+++ b/index copy.html
@@ -23,7 +23,7 @@
 
         <div class="main">
             <div class="title">
-                미정
+                미정-MIJEONG
             </div>
             <div class="subtitle">
                 바보 멍청이들
@@ -31,10 +31,29 @@
         </div>
 
         <div class="member">
-            <div class="profile"><img src="https://i.ibb.co/JKhgT1t/170-20220410225706.png" height="150px"/></div>
-            <h1>다솔</h1>
-            <p><div class="email"><a href="hachunsik1@gmail.com"><img src="https://w7.pngwing.com/pngs/409/189/png-transparent-black-envelope-art-computer-icons-envelope-icon-design-envelope-miscellaneous-angle-rectangle-thumbnail.png" height="25px"/></a></div>
-            <div class="kakao"><a href="https://open.kakao.com/o/soEr2Dqd"><img src="https://cdn.icon-icons.com/icons2/2428/PNG/512/kakaotalk_black_logo_icon_147117.png" height="23px"/></a></div></p>
+            <div class="css-dasol">
+                <div class="profile">
+                    <img class="pi" src="https://i.ibb.co/JKhgT1t/170-20220410225706.png" height="200px"/>
+                    <div class="information">
+                        <div class="1818">
+                            <div class="player"><h1>다솔</h1></div>
+                            <div class="introduce"><p>여고생 서다솔</p></div>
+                        </div>
+                        <div style="gap:3px" class="call">
+                            <h1 class="kakao"><a href="https://open.kakao.com/o/soEr2Dqd"><img src="https://cdn.icon-icons.com/icons2/2428/PNG/512/kakaotalk_black_logo_icon_147117.png" height="23px"/></a> <a href="mailto:dasolseo4@gmail.com"><img src="https://w7.pngwing.com/pngs/409/189/png-transparent-black-envelope-art-computer-icons-envelope-icon-design-envelope-miscellaneous-angle-rectangle-thumbnail.png" height="25px"/></a></h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="css-eunsu">
+                <div class="profile">
+                    <img class="pi" src="https://item.kakaocdn.net/do/394adaa8e1f450f37d96ed2904b87bb28f324a0b9c48f77dbce3a43bd11ce785" height="200px">
+                    <div class="information">
+                        <h1 class="player">은수</h1>
+                        <p class="introduce">대학생 원숭이</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
